Bug 696654 - PCL/PXL fails to build with system-shared libjpeg.

Remove the HP CLJ 3500/3500/3600 emulation until it can be properly
integrated with libjpeg.